packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc1155_no_hooks_impl.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc1155: ERC1155Component::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc1155.initializer("");
    }

    use openzeppelin_token::erc1155::ERC1155Component;

    component!(path: ERC1155Component, storage: erc1155, event: ERC1155Event);

    impl ERC1155InternalImpl = ERC1155Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC1155Event: ERC1155Component::Event,
    }
}


Diagnostics:

====
Warning: The ERC1155 component requires an implementation of the ERC1155HooksTrait in scope. It looks like this implementation is missing.

You can use the ERC1155HooksEmptyImpl implementation by importing it:

`use openzeppelin_token::erc1155::ERC1155HooksEmptyImpl;`
====

AuxData:

None
