packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc20_flash_mint_custom_config.snap
---
source: src/tests/test_with_components.rs
expression: result
---
TokenStream:

#[starknet::contract]
pub mod MyToken {
    use openzeppelin_token::erc20::{DefaultConfig, ERC20HooksEmptyImpl};
    #[abi(embed_v0)]
    impl ERC20FlashMintImpl =
        ERC20FlashMintComponent::ERC20FlashMintImpl<ContractState>;
    impl FlashMintConfigImpl of ERC20FlashMintComponent::FlashMintConfigTrait<ContractState> {}
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc20: ERC20Component::Storage,
        #[substorage(v0)]
        pub erc20_flash_mint: ERC20FlashMintComponent::Storage,
    }
    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc20.initializer("MyToken", "MTK");
    }
    use openzeppelin_token::erc20::ERC20Component;
    use openzeppelin_token::erc20::extensions::erc20_flash_mint::ERC20FlashMintComponent;

    component!(path: ERC20Component, storage: erc20, event: ERC20Event);
    component!(
        path: ERC20FlashMintComponent, storage: erc20_flash_mint, event: ERC20FlashMintEvent,
    );

    impl ERC20InternalImpl = ERC20Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC20Event: ERC20Component::Event,
        #[flat]
        ERC20FlashMintEvent: ERC20FlashMintComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
