packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc20_flash_mint_votes.snap
---
source: src/tests/test_with_components.rs
expression: result
---
TokenStream:

#[starknet::contract]
pub mod MyToken {
    use openzeppelin_token::erc20::DefaultConfig;
    use openzeppelin_token::erc20::extensions::erc20_flash_mint::DefaultConfig as FlashMintDefaultConfig;
    use openzeppelin_utils::cryptography::snip12::SNIP12Metadata;
    use starknet::ContractAddress;
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc20: ERC20Component::Storage,
        #[substorage(v0)]
        pub erc20_flash_mint: ERC20FlashMintComponent::Storage,
        #[substorage(v0)]
        pub votes: VotesComponent::Storage,
        #[substorage(v0)]
        pub nonces: NoncesComponent::Storage,
    }
    pub impl SNIP12MetadataImpl of SNIP12Metadata {
        fn name() -> felt252 {
            "DAPP_NAME"
        }
        fn version() -> felt252 {
            "DAPP_VERSION"
        }
    }
    impl ERC20VotesHooksImpl of ERC20Component::ERC20HooksTrait<ContractState> {
        fn after_update(
            ref self: ERC20Component::ComponentState<ContractState>,
            from: ContractAddress,
            recipient: ContractAddress,
            amount: u256,
        ) {
            let mut contract_state = self.get_contract_mut();
            contract_state.votes.transfer_voting_units(from, recipient, amount);
        }
    }
    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc20.initializer("MyToken", "MTK");
    }
    use openzeppelin_governance::votes::VotesComponent;
    use openzeppelin_token::erc20::ERC20Component;
    use openzeppelin_token::erc20::extensions::erc20_flash_mint::ERC20FlashMintComponent;
    use openzeppelin_utils::nonces::NoncesComponent;

    component!(path: ERC20Component, storage: erc20, event: ERC20Event);
    component!(
        path: ERC20FlashMintComponent, storage: erc20_flash_mint, event: ERC20FlashMintEvent,
    );
    component!(path: VotesComponent, storage: votes, event: VotesEvent);
    component!(path: NoncesComponent, storage: nonces, event: NoncesEvent);

    impl ERC20InternalImpl = ERC20Component::InternalImpl<ContractState>;
    impl VotesInternalImpl = VotesComponent::InternalImpl<ContractState>;
    impl NoncesInternalImpl = NoncesComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC20Event: ERC20Component::Event,
        #[flat]
        ERC20FlashMintEvent: ERC20FlashMintComponent::Event,
        #[flat]
        VotesEvent: VotesComponent::Event,
        #[flat]
        NoncesEvent: NoncesComponent::Event,
    }
}


Diagnostics:

====
Warning: The ERC20FlashMint and Votes components require additional integration care because
`max_flash_loan` does not account for an additional voting-supply cap. Calling
`transfer_voting_units` from the ERC20 hooks does not address this limitation.

Consider avoiding this combination or overriding `FlashMintConfigTrait` to enforce the
appropriate maximum flash loan.
====

AuxData:

None
